--- a/admin/src/index.html
+++ b/admin/src/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <title>vue-pro</title>
     <script src="./static/js/event.js"></script>
+    <script src="./static/js/recorder.js"></script>
     <style>
       body{
         margin:0;
