--- a/admin/src/index.html
+++ b/admin/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-    <title>vue-pro</title>
+    <title>vue-cli</title>
     <script src="./static/js/event.js"></script>
     <style>
       body{
