--- a/admin/src/mvc.html
+++ b/admin/src/mvc.html
@@ -926,8 +926,8 @@ a:active,a:link,a:hover{
     height: 0.24rem;
     display: inline-block;
     background-image: linear-gradient(-180deg, #F0F1F1 0%, #9A9494 50%, #EBEBEB 100%);
-    margin-top: 0.2rem;
-    vertical-align: top;
+	vertical-align: top;
+	margin: 0.2rem 0.06rem 0;
 }
 
 .pay_wap .payment .cardInfo .qishu{
