--- a/admin/src/mvc.html
+++ b/admin/src/mvc.html
@@ -361,7 +361,7 @@
         this.renderPrice = function(data){}
         //设置选中状态
         this.setActive = function(el){}
-		//视图的事件注册
+		//视图的dom事件注册
 		this.regEvent = function(){}
     }
 
