--- a/admin/src/mvcPC.html
+++ b/admin/src/mvcPC.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Document</title>
-	<link rel="stylesheet" href="https://m1.lenovouat.com/lenovo_common_search/lenovo_wap/css/bootstrap.min.css"/>
     <script src="http://js1cdn.clubstatic.lenovo.com.cn/thinkpc/js/jquery-1.8.3.min.js"></script>
 </head>
 <body>
@@ -841,7 +840,7 @@
 .container{
 	width:1200px;
 	margin:0 auto;
-	padding-bottom:50px;
+	padding-bottom:70px;
 }
 
 .container .inline{
@@ -1021,6 +1020,10 @@ ul li {
 	font-size:20px;
 	background:#f00;
 	color:#fff;
+}
+.bottomPrice div.submit:hover{
+    background:#f33;
+    cursor:pointer;
 }
 .bottomPrice .priceText{
 	height:50px;
