--- a/admin/src/mvc.html
+++ b/admin/src/mvc.html
@@ -11,28 +11,41 @@
 <body>
 	<div class="pay_wap">
 		<div class="container">
-				<div tag='detail'></div>
-				<div tag='quick'>
-                    <div class="payment fastPayment">
-						<div class="payName">快捷支付</div>
-                        <div class="payContent"></div>
+            <div tag='detail'></div>
+            <div tag='quick'>
+                <div class="payment fastPayment">
+                    <div class="payName">快捷支付</div>
+                    <div class="payContent"></div>
+                </div>
+            </div>
+            <div tag='stages'>
+                <div class="payment fastPayment" id="fenqi">
+                    <div class="payName">分期支付</div>
+                    <div class="payContent">
+                        <ul class="wayList">
+                        </ul>
                     </div>
                 </div>
-				<div tag='stages'>
-                    <div class="payment fastPayment" id="fenqi">
-                        <div class="payName">分期支付</div>
-                        <div class="payContent">
-                            <ul class="wayList">
-                            </ul>
-                        </div>
-                    </div>
+            </div>
+            <div tag='net'></div>
+            <div tag='price'>
+                <div class="payNum">
+                    <a class="payLink"></a>
                 </div>
-				<div tag='net'></div>
-				<div tag='price'>
-                    <div class="payNum">
-                        <a class="payLink"></a>
-                    </div>
+            </div>
+            <!-- 遮罩 -->
+            <div class="mask"></div>
+            <!-- 离开支付弹框 -->
+            <div class="leaveContent">
+                <div class="dialogMsg">
+                    <p class="ask">确认要离开收银台？</p>
+                    <p class="prompt">您的订单将在23小时59分钟内未支付将被取消,请尽快完成支付</p>
                 </div>
+                <div class="btnGroup">
+                    <a><input type="button" value="继续支付" class="no"/></a>
+                    <a><input type="button" value="确认离开" class="yes"/></a>
+                </div>
+            </div>
 		</div>
 	</div>
 </body>
@@ -643,7 +656,18 @@
 						$(this).css('border-bottom','1px solid #eaeaea')
 					}
 				}
-			});
+            });
+            //支付
+            $("div.container").on('click','.payNum',function(){
+                $(".mask").show();
+                $(".leaveContent").show();
+            })
+
+            //离开支付
+            $("div.container").on('click','.yes',function(){
+                $(".mask").hide();
+                $(".leaveContent").hide();
+            })
 		}
 
         this.setActive = function(el){
@@ -1086,6 +1110,7 @@ a:active,a:link,a:hover{
 .pay_wap .leaveContent .btnGroup a input{
     width: 100%;
     height: 100%;
+    font-size: 0.17rem;
 }
 
 </style>
