--- a/admin/src/mvc.html
+++ b/admin/src/mvc.html
@@ -11,28 +11,7 @@
 <body>
 	<div class="pay_wap">
 		<div class="container">
-				<div tag='detail'></div>
-				<div tag='quick'>
-                    <div class="payment fastPayment">
-						<div class="payName">快捷支付</div>
-                        <div class="payContent"></div>
-                    </div>
-                </div>
-				<div tag='stages'>
-                    <div class="payment fastPayment" id="fenqi">
-                        <div class="payName">分期支付</div>
-                        <div class="payContent">
-                            <ul class="wayList">
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-				<div tag='net'></div>
-				<div tag='price'>
-                    <div class="payNum">
-                        <a class="payLink"></a>
-                    </div>
-                </div>
+
 		</div>
 	</div>
 </body>
@@ -364,11 +343,11 @@
     }
 
     var SuperView = function(){
-        this.detailEl = $('div[tag="detail"]');
-        this.quickEl = $('div[tag="quick"] .payContent');
-        this.stagesEl = $('div[tag="stages"] .wayList');
-        this.netEl = $('div[tag="net"]');
-        this.priceEl = $('div[tag="price"] .payLink');
+        this.detailEl = $("<div tag='detail'></div>");
+        this.quickEl = $("<div tag='quick'></div>");
+        this.stagesEl = $("<div tag='stages'></div>");
+        this.netEl = $("<div tag='net'></div>");
+        this.priceEl = $("<div tag='price'></div>");
 
         //渲染详情
         this.renderDetail = function(data){}
@@ -382,7 +361,7 @@
         this.renderPrice = function(data){}
         //设置选中状态
         this.setActive = function(el){}
-		//视图的dom事件注册
+		//视图的事件注册
 		this.regEvent = function(){}
     }
 
@@ -526,7 +505,7 @@
 			var html = '<div class="orderInfo">'
 						+'<div class="clearfix">'
 						+'<span class="fl orderName">订单金额</span>'
-						+'<span class="fr orderAmount">¥'+data.totalFee.amount+'</span>'
+						+'<span class="fr orderAmount">'+data.totalFee.amount+'</span>'
 						+'</div>'
 						+'<div class="clearfix">'
 						+'<span class="fl orderName">订单编号</span>'
@@ -534,11 +513,15 @@
 						+'</div>'
 						+'</div>';
 			$(this.detailEl).html(html);
+			$("div.container").append($(this.detailEl));
         }
 
         this.renderQuickPay = function(data){
 			console.log(data)
-			var html = '<ul class="wayList">';
+			var html = '<div class="payment fastPayment">'
+						+'<div class="payName">快捷支付</div>'
+						+'<div class="payContent">'
+						+'<ul class="wayList">';
 						for(var i=0;i<data.length;i++){
 							if(data[i].selected == 1){
 								html += '<li class="way priceDetail active" key="' + data[i].__key+ '" tag="tcQuick">'	
@@ -550,13 +533,17 @@
 								+'<span class="select_card"></span>'
 								+"</li>";
 						}
-						html += "</ul>";
+						html += "</ul></div></div>";
             $(this.quickEl).html($(html));
+            $("div.container").append($(this.quickEl));
         }
 
         this.renderStagesPay = function(data){
 			console.log(data);
-			var html = '';
+			var html = '<div class="payment fastPayment" id="fenqi">'
+					  +'<div class="payName">分期支付</div>'
+					  +'<div class="payContent">'
+					  +'<ul class="wayList">'
             for(var i=0;i<data.length;i++){
 				html+= '<li class="way">'
 						+'<div class="cardInfo">'
@@ -583,15 +570,21 @@
 					}
 				html += '</ul>';
             }
-            html += "</li>";
+            html += "</li></ul></div></div>";
             $(this.stagesEl).html($(html));
+            $("div.container").append($(this.stagesEl));
         }
 
         this.renderPrice = function(data){
-			var html = '<span class="selectWayName">'+data.__priceName+'</span>'
+			var html = '<div class="payNum">'
+				+'<a class="payLink">'
+				+'<span class="selectWayName">'+data.__priceName+'</span>'
 				+'<span>'+data.__price+'</span>'
 				+ map[data.__priceUnit]
+				+'</a>'
+				+'</div>';
 			$(this.priceEl).html(html);
+            $("div.container").append($(this.priceEl));
         }
 
         this.renderAll = function(datas){
@@ -933,8 +926,8 @@ a:active,a:link,a:hover{
     height: 0.24rem;
     display: inline-block;
     background-image: linear-gradient(-180deg, #F0F1F1 0%, #9A9494 50%, #EBEBEB 100%);
-	vertical-align: top;
-	margin: 0.2rem 0.06rem 0;
+    margin-top: 0.2rem;
+    vertical-align: top;
 }
 
 .pay_wap .payment .cardInfo .qishu{
