--- a/admin/src/index.html
+++ b/admin/src/index.html
@@ -10,6 +10,12 @@
     <meta name="description" content="联想官方网上商城,为您提供最新联想笔记本电脑,联想平板电脑,联想手机,联想台式机,联想一体电脑,联想服务器,联想外设数码产品,联想智能电视等产品在线购买及售后服务,为您提供愉悦的网上购物体验">
     <meta name="keyword" content="联想官方商城,站内搜索">
     <script src="./static/js/event.js"></script>
+    <!-- 引入css，该链接始终为最新版的资源 -->
+    <link rel="stylesheet" href="https://unpkg.com/vue-happy-scroll/docs/happy-scroll.css">
+    <!-- 引入vue -->
+    <!-- 引入组件，该链接始终为最新版的资源 -->
+    <script src="https://unpkg.com/vue-happy-scroll/docs/happy-scroll.min.js"></script>
+
     <style>
       body{
         margin:0;
