--- a/admin/test.html
+++ b/admin/test.html
@@ -108,8 +108,8 @@
         let html = "";
         data.forEach(x=>{
             html += "<tr>";
-            html += "<td>"+x.delivername+"</td>";
-            html += "<td>"+x.delivermobile+"</td>";
+            html += "<td>'"+x.delivername+"</td>";
+            html += "<td>'"+x.delivermobile+"</td>";
             html += "<td>"+x.deliverprovice+"</td>";
             html += "<td>"+x.provinceNo+"</td>";
             html += "<td>"+x.delivercity+"</td>";
