--- a/admin/address.html
+++ b/admin/address.html
@@ -111,7 +111,7 @@
             html += "<td>"+x.delivername+"</td>";
             html += "<td>"+x.delivermobile+"</td>";
             html += "<td>"+x.deliverprovice+"</td>";
-            html += "<td>"+x.provinceNo+"</td>";
+            html += "<td>'"+x.provinceNo+"</td>";
             html += "<td>"+x.delivercity+"</td>";
             html += "<td>"+x.cityNo+"</td>";
             html += "<td>"+x.delivercounty+"</td>";
